// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`array type limit precision to 3 digits 1`] = `
Array [
  "0.5,0.460",
  "0.5,0.875",
  "0.25,0.875",
]
`;

exports[`array type limit precision to 4 digits 1`] = `
Array [
  "0.5,0.4603",
  "0.5,0.875",
  "0.25,0.875",
]
`;
